[package]
name = "raknet"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version = "0.6", features = ["std"]}
tokio = {version = "*", features = ["rt","net","sync","macros","time","rt-multi-thread"]}
byteorder = "1"