[package]
name = "raknet"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version = "0.6", features = ["std"]}
tokio = {version = "*", features = ["full"]}
tokio-byteorder = "0.3.0"
async-trait = "0.1.52"